Add display voronoi diagram option

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<form action="app.component.ts" class="controls">
+  <label>Display Voronoi</label>
+  <input type="checkbox" (change)="toggleDisplayVoronoi()"/>
+</form>
 <div id="map"></div>
