Add slider, WIP filtering

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <label>Display Voronoi</label>
   <input type="checkbox" (change)="toggleDisplayVoronoi()"/>
 </form>
+<slider></slider>
 <div id="map"></div>
