--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,20 +27,29 @@ body {
   position: absolute;
   text-align: left;
   font-size: 0.8em;
-  width: 7em;
+  color: white;
+  padding: 10px;
   visibility: hidden;
+  border-radius: 10px;
+  background: rgba(44, 44, 44, 0.49);
 }
 
 .highlighted {
   stroke-width: 2;
   stroke: #248968;
-  r: 4
 }
 
 .controls {
   position: absolute;
   top: 4em;
   left: 8em;
+}
+
+.edge {
+  fill: none;
+  stroke: #252525;
+  stroke-width: 1px;
+  stroke-opacity: 0.1;
 }
 
 .invisible {
