--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,5 @@
   <g id="edges"></g>
   <g id="nodes"></g>
   <g id="voronoi"></g>
+  <text id="tooltip" class="tooltip" style="display: none;"></text>
 </svg>
