--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 body {
   background-color: white;
-  text-align: center;
+  text-align: left;
   font-family: sans-serif;
 }
 
@@ -42,9 +42,9 @@ body {
 }
 
 .controls {
-  position: absolute;
-  top: 4em;
-  left: 8em;
+  position: relative;
+  //top: 4em;
+  //left: 8em;
 }
 
 .edge {
@@ -56,4 +56,46 @@ body {
 
 .invisible {
   visibility: hidden;
+}
+
+slider .ngx-slider .ngx-slider-pointer{
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    top: -15px;
+    background-color: #696969;
+    z-index: 3;
+    border-radius: 16px;
+}
+
+
+slider .ngx-slider .ngx-slider-pointer:after{
+    content: '';
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    top: 9px;
+    left: 9px;
+    border-radius: 15px;
+    background: #fff;
+}
+
+slider .ngx-slider .ngx-slider-selection{
+    z-index: 2;
+    background: #585858;
+    border-radius: 2px;
+}
+
+slider .ngx-slider .ngx-slider-bubble{
+    cursor: default;
+    bottom: 20px;
+    padding: 3px;
+    color: #55637d;
+    font-size: 16px;
+}
+
+
+slider input {
+    padding: 0.3em;
+    margin: 0.5em;
 }
