--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 </form>
 <slider></slider>
 <svg width="960" height="600">
+  <rect width="960" height="600" id="border"></rect>
   <!-- must be in this order for drawing -->
   <g id="basemap"></g>
   <g id="edges"></g>
