--- a/src/app/slider.component.html
+++ b/src/app/slider.component.html
@@ -1,5 +1,5 @@
-<p>Min value: <input type="number" [(ngModel)]="minValue"></p>
-<p>Max value: <input type="number" [(ngModel)]="maxValue"></p>
+<p>Min size: <input type="number" [(ngModel)]="minValue"></p>
+<p>Max size: <input type="number" [(ngModel)]="maxValue"></p>
 <ngx-slider
   [(value)]="minValue"
   [(highValue)]="maxValue"
