--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <input type="checkbox" (change)="toggleDisplayVoronoi()"/>
 </form>
 <slider></slider>
-<svg width="960" height="600">
+<svg width="960" height="600" class="center">
   <rect width="960" height="600" id="border"></rect>
   <!-- must be in this order for drawing -->
   <g id="basemap"></g>
